# ci-playground

./: .commitlintrc.yml  .gitignore  Dockerfile  cliff.toml  pixi.toml  prepare-release.sh  pyproject.toml  readme.rst  yaf.txt
.github/templates/: release_pr.md
.github/workflows/: create-release-artifacts.yml  docs.yml  finish-release.yml  lint-pr-message.yml  prep-commit-lint.yml  prep-release.yml  publish-docker.yml  publish-pypi.yml  purge_all_caches.yml  refresh-cache.yml  release.yml  test-docker.yml  tests.yml  tests_pip.yml
docs/: changelog.rst  conf.py  index.rst  switcher.json
docs/_static/: switcher.json
docs/source/: conf.py  index.rst
hydromt/: __init__.py
playground/: __init__.py  math.py
tests/: conftest.py  test_unit.py
